# University-Data-organisation-and-stuctures

./: CMakeLists.txt  README.md  lab1-1.txt
Lab2/: lab2_1.cpp  lab2_1.h  lab2_1_List.cpp  lab2_1_WM.cpp  lab2_2_driver.cpp
Lab2/Lab2_1/: city.cpp  city.h  road.cpp  road.h
Lab2/Lab2_2/: tree.h  tree_node.h
Lab2/lib/: graph.cpp  graph.h  l_graph.cpp  l_graph.h  r_graph.cpp  r_graph.h
Lab3/: Lab3_1.cpp  lab_3_1_sort.h
Lab3/3_1/: Lab3_1_Driver.cpp  lab_3_1_sort.h  lab_3_1_sort_driver.h
Lab3/3_1/tests/: unsorted.txt
lab1/: lab1_1.cpp  lab1_1REF.cpp  lab1_1_Remake.cpp  lab1_2.cpp  lab1_2N.cpp  lab1_2t.cpp
lab1/lab1_2/: polynomial_list.h  polynomial_vector.h
