cmake_minimum_required(VERSION 3.13)
project(University-Data-organisation-and-stuctures)

set(CMAKE_CXX_STANDARD 17)

#add_executable(University-Data-organisation-and-stuctures lab1/lab1_1.cpp lab1/lab1_2/polynomial_list.h lab1/lab1_2/polynomial_vector.h)
add_executable(University-Data-organisation-and-stuctures Lab2/lab2_1_WM.cpp Lab2/lab2_1_List.cpp)
#add_executable(University-Data-organisation-and-stuctures lab1/lab1_1_Remake.cpp)

