cmake_minimum_required(VERSION 3.13)
project(University-Data-organisation-and-stuctures)

set(CMAKE_CXX_STANDARD 17)

#add_executable(University-Data-organisation-and-stuctures lab1/lab1_2/polynomial_list.h lab1/lab1_2/polynomial_vector.h)
#add_executable(University-Data-organisation-and-stuctures Lab2/lab2_1_WM.cpp Lab2/lab2_1_List.cpp)
#add_executable(University-Data-organisation-and-stuctures Lab2/lab2_2_driver.cpp Lab2/Lab2_2/tree_node.h Lab2/Lab2_2/tree.h )
add_executable(University-Data-organisation-and-stuctures Lab3/3_1/lab_3_1_sort.h Lab3/3_1/Lab3_1_Driver.cpp Lab3/3_1/lab_3_1_sort_driver.h)
#add_executable(University-Data-organisation-and-stuctures Lab3/hlpGenFiles.cpp)
#add_executable(University-Data-organisation-and-stuctures lab1/lab1_1_Remake.cpp)

